Attempt to fix horizontal overflow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,6 @@
 body {
     margin: 0;
     background-color: whitesmoke;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
